--- a/src/components/portfolioExample/portfolioExample.module.css
+++ b/src/components/portfolioExample/portfolioExample.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    height: 60vh;
+    height: 100%;
     width: 100%;
     height: auto;
 }
